# dd4hep_tutorial

./: .gitignore  CMakeLists.txt  README.md  edm4toy.yaml
compact/: ToyCalorimeter.xml
edm4toy/: CMakeLists.txt
scripts/: createProject.c  toycalo_steering.py
src/: Geant4EDM4ToyReadout.cpp  SegmentationFactories.cpp  ToyCaloHit.cpp  ToyCaloHit.h  ToyCalorimeter.cpp  ToyCalorimeter_SDAction.cpp  ToyCalorimeter_SDAction_Custom.cpp  ToySegmentation.cpp  ToySegmentation.h  ToySegmentationHandle.cpp  ToySegmentationHandle.h
